--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<div class="flex flex-wrap items-center justify-between py-6">
 					<div class="w-1/2 md:w-auto">
 						<a href="index.html" class="text-white font-bold text-2xl">
-							<img src="/public/images/logo.png" class="h-20 w-20" alt="logo" />
+							<img src="images/logo.png" class="h-20 w-20" alt="logo" />
 						</a>
 					</div>
 
