--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
 				<section
 					class="cover bg-blue-teal-gradient w-full relative bg-blue-600 px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 overflow-hidden py-48 flex items-center min-h-screen">
 					<div class="h-full absolute top-0 left-0 z-0">
-						<!-- <img
-							src="images/cover-bg.jpg"
+						<img
+							src="images/UN.jpg"
 							alt=""
-							class="w-full h-full object-cover opacity-20" /> -->
+							class="w-screen h-full object-cover opacity-20" />
 					</div>
 
 					<div class="w-full text-center relative z-10 h-100 lg:mt-16">
