added pdf to the webpage

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 				<div
 					class="bg-white w-full md:max-w-md lg:max-w-full md:mx-auto md:mx-0 md:w-1/2 h-screen px-6 lg:px-16 xl:px-24 flex items-center justify-center">
 					<div class="w-full h-100">
-						<a class="font-bold text-2xl" href="index.html"> Omini-Frontier </a>
+						<a class="font-bold text-2xl" href="index.html"> Omni-Frontier </a>
 
 						<h1 class="text-xl md:text-3xl font-bold leading-tight mt-12">
 							Humanitarian International organization
