--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="stylesheet" href="build/tailwind.css" />
 
-		<title>Omini-Frontier</title>
+		<title>Omni-Frontier</title>
 
 		<style>
 			#menu-toggle:checked + #menu {
@@ -169,7 +169,7 @@
 						<div>
 							<h1
 								class="text-white text-4xl md:text-5xl xl:text-6xl font-bold leading-tight">
-								Omini-Frontier Humanitarian International organization
+								Omni-Frontier Humanitarian International organization
 							</h1>
 							<p class="text-blue-100 text-xl md:text-2xl leading-snug mt-4">
 								A not for-profit and non-political organization to serve and
@@ -192,12 +192,12 @@
 				<div class="flex flex-col lg:flex-row lg:-mx-8">
 					<div class="w-full lg:w-1/2 lg:px-8">
 						<h2 class="text-3xl leading-tight font-bold mt-4">
-							Omini-Frontier Humanitarian International organization aims and
+							Omni-Frontier Humanitarian International organization aims and
 							objectives
 						</h2>
 
 						<p class="mt-2 leading-relaxed">
-							We, the members of Omini-Frontier Humanitarian International
+							We, the members of Omni-Frontier Humanitarian International
 							organization a not a for-profit and non-political organization do
 							firmly and solemnly resolve to provide for ourselves a
 							constitution and to be governed by the provisions therein
@@ -263,33 +263,65 @@
 							Our Recently concluded Programs
 						</h2>
 						<p class="mt-2 lg:text-xl leading-relaxed">
-							Humanitarian effort in Jigawa
+							Humanitarian effort in Africa
 						</p>
-						<div class="md:flex md:flex-wrap mt-24 text-center md:-mx-4">
-							<div class="md:w-full md:px-4 lg:w-1/2">
+						<div class="md:flex md:flex-wrap mt-4 md:-mx-4">
+							<div class="md:w-full md:px-4 lg:w-1/2 p-4">
 								<div class="bg-white rounded-lg border border-gray-300">
-									<img src="images/Image1.jpeg" alt="" class="h-full mx-auto" />
+									<img
+										src="images/Jigawa.png"
+										alt=""
+										class="h-56 object-cover w-full mx-auto" />
+								</div>
+								<div class="h-full mt-3 text-start">
+									<h2 class="font-bold text-lg lg:text-xl text-left">
+										Highlights on 2022 Flood Incident in Jigawa State
+									</h2>
+									<p class="text-justify mt-4">
+										The 2022 Flood incident has comes with unusual ferocity and
+										devastation effects on many communities i Jifawa State
+										expecially those living aloong Hadejia Valley.
+									</p>
+									<ul class="text-left mt-4 list-disc ml-5 mb-5">
+										<p class="mb-3">Preliminary reports reveal that:</p>
+										<li>
+											About 123 individual were lost during the flood incident
+										</li>
+										<li>Hundreds of houses were destroyed</li>
+										<li>
+											Properties and infrastructure (including farm lands) worth
+											several Billions of Naira were also lost
+										</li>
+									</ul>
+									<div class="w-full flex justify-start">
+										<a
+											class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 border border-white rounded"
+											href="images/jigawa.pdf"
+											target="_blank"
+											>Read More</a
+										>
+									</div>
 								</div>
 							</div>
 
-							<div class="md:w-full md:px-4 lg:w-1/2">
+							<!-- <div class="md:w-full md:px-4 lg:w-1/2">
 								<div class="bg-white rounded-lg border border-gray-300">
 									<img
 										src="images/Image2.jpeg"
 										alt=""
 										class="h-full w-full mx-auto" />
 								</div>
-							</div>
-							<div class="md:w-full md:px-4 mt-6 lg:w-1/2">
+							</div> -->
+							<!-- <div class="md:w-full md:px-4 mt-6 lg:w-1/2">
 								<div class="bg-white rounded-lg border border-gray-300">
 									<img src="images/Image5.jpeg" alt="" class="h-full mx-auto" />
 								</div>
-							</div>
-							<div class="md:w-full md:px-4 mt-6 lg:w-1/2">
+							</div> -->
+							<!-- <div class="md:w-full md:px-4 mt-6 lg:w-1/2">
 								<div class="bg-white rounded-lg border border-gray-300">
 									<img src="images/Image4.jpeg" alt="" class="h-full mx-auto" />
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -398,7 +430,7 @@
 				class="relative bg-gray-900 text-white px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 lg:py-24">
 				<div class="flex flex-col md:flex-row">
 					<div class="w-full lg:w-2/6 lg:mx-4 lg:pr-8">
-						<h3 class="font-bold text-2xl">Omini-Frontier</h3>
+						<h3 class="font-bold text-2xl">Omni-Frontier</h3>
 						<p class="text-gray-400">Humanitarian International organization</p>
 					</div>
 
@@ -464,7 +496,7 @@
 												d="M20,4H4C2.896,4,2,4.896,2,6v12c0,1.104,0.896,2,2,2h16c1.104,0,2-0.896,2-2V6C22,4.896,21.104,4,20,4z M20,8.7l-8,5.334 L4,8.7V6.297l8,5.333l8-5.333V8.7z" />
 										</svg>
 									</span>
-									<span class="ml-3">Omini-Frontierintl@gmail.com</span>
+									<span class="ml-3">Omni-Frontierintl@gmail.com</span>
 								</a>
 							</li>
 						</ul>
@@ -534,7 +566,7 @@
 						</ul>
 
 						<p class="text-sm text-gray-400 mt-12">
-							© 2023 Omini-Frontier. <br class="hidden lg:block" />All Rights
+							© 2023 Omni-Frontier. <br class="hidden lg:block" />All Rights
 							Reserved.
 						</p>
 					</div>
