all pages has been completed

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 						<nav
 							class="w-full bg-white md:bg-transparent rounded shadow-lg px-6 py-4 mt-4 text-center md:p-0 md:mt-0 md:shadow-none">
 							<ul class="md:flex items-center">
-								<li>
+								<li class="md:ml-4">
 									<a
-										class="py-2 inline-block md:text-white md:hidden lg:block font-semibold"
-										href="#"
-										>Services</a
+										class="py-2 inline-block md:text-blue-500 md:px-2 font-semibold"
+										href="index.html"
+										>Home</a
 									>
 								</li>
 								<li class="md:ml-4">
@@ -135,7 +135,7 @@
 								<li class="md:ml-4">
 									<a
 										class="py-2 inline-block md:text-white md:px-2 font-semibold"
-										href="#"
+										href="program.html"
 										>Our programs</a
 									>
 								</li>
@@ -212,11 +212,11 @@
 							</div>
 							<div class="md:ml-8 mt-4 md:mt-0">
 								<h4 class="text-xl font-bold leading-tight">
-									To serve and assits the less priviledge in society
+									To serve and assists the less priviledge in society
 								</h4>
 								<p class="mt-2 leading-relaxed">
 									by provision of shelter and accommodations especially to
-									internally dsiplaced persons.
+									internally displaced persons.
 								</p>
 							</div>
 						</div>
@@ -279,21 +279,23 @@
 									</h2>
 									<p class="text-justify mt-4">
 										The 2022 Flood incident has comes with unusual ferocity and
-										devastation effects on many communities i Jifawa State
-										expecially those living aloong Hadejia Valley.
+										devastation effects on many communities in Jigawa State
+										especially those living along Hadejia Valley.
+									</p>
+									<p class="mb-3 text-left mt-3 font-bold">
+										Preliminary reports reveal that:
 									</p>
 									<ul class="text-left mt-4 list-disc ml-5 mb-5">
-										<p class="mb-3">Preliminary reports reveal that:</p>
 										<li>
-											About 123 individual were lost during the flood incident
+											About 124 individuals were lost during the flood incident
 										</li>
-										<li>Hundreds of houses were destroyed</li>
+										<li>Hundreds of houses were destroyed.</li>
 										<li>
-											Properties and infrastructure (including farm lands) worth
-											several Billions of Naira were also lost
+											Properties and Infrastructure (including farm lands )
+											worth several Billions of Naira were also lost.
 										</li>
 									</ul>
-									<div class="w-full flex justify-start">
+									<div class="w-full flex justify-center md:justify-start">
 										<a
 											class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 border border-white rounded"
 											href="images/jigawa.pdf"
