--- a/about.html
+++ b/about.html
@@ -121,13 +121,13 @@
 								<li>
 									<a
 										class="py-2 inline-block md:text-white md:hidden lg:block font-semibold"
-										href="#"
-										>Services</a
+										href="index.html"
+										>Home</a
 									>
 								</li>
 								<li class="md:ml-4">
 									<a
-										class="py-2 inline-block md:text-white md:px-2 font-semibold"
+										class="py-2 inline-block md:text-blue-500 md:px-2 font-semibold"
 										href="#"
 										>About us</a
 									>
@@ -135,7 +135,7 @@
 								<li class="md:ml-4">
 									<a
 										class="py-2 inline-block md:text-white md:px-2 font-semibold"
-										href="#"
+										href="program.html"
 										>Our programs</a
 									>
 								</li>
