--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,10 @@
 				</div>
 
 				<div class="hidden lg:block w-full md:w-1/2 h-screen bg-blue-900">
-					<!-- <img
-						src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=100"
+					<img
+						src="images/Jigawa.png"
 						alt=""
-						class="w-full h-screen object-cover" /> -->
+						class="w-full h-screen object-cover" />
 				</div>
 			</section>
 		</main>
