--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
 						<h2 class="text-3xl leading-tight font-bold mt-4">
 							Our Recently concluded Programs
 						</h2>
-						<p class="mt-2 lg:text-xl leading-relaxed">
+						<a href="jigawa.html" class="block mt-2 lg:text-xl leading-relaxed">
 							Humanitarian effort in Africa
-						</p>
+						</a>
 						<div class="md:flex md:flex-wrap mt-4 md:-mx-4">
 							<div class="md:w-full md:px-4 lg:w-1/2 p-4">
 								<div class="bg-white rounded-lg border border-gray-300">
