--- a/program.html
+++ b/program.html
@@ -212,9 +212,9 @@
 						<h2 class="text-3xl leading-tight font-bold mt-4">
 							Our Recently concluded Programs
 						</h2>
-						<a href="jigawa.html" class="block mt-2 lg:text-xl leading-relaxed">
+						<h2 class="block mt-2 lg:text-xl leading-relaxed">
 							Humanitarian effort in Africa
-						</a>
+						</h2>
 						<div class="md:flex md:flex-wrap mt-4 md:-mx-4">
 							<div class="md:w-full md:px-4 lg:w-1/2 p-4">
 								<div class="bg-white rounded-lg border border-gray-300">
@@ -224,9 +224,12 @@
 										class="h-56 object-cover w-full mx-auto" />
 								</div>
 								<div class="h-full mt-3 text-start">
-									<h2 class="font-bold text-lg lg:text-xl text-left">
+									<a
+										href="jigawa.html"
+										class="font-bold text-lg lg:text-xl text-left">
 										Highlights on 2022 Flood Incident in Jigawa State
-									</h2>
+									</a>
+
 									<p class="text-justify mt-4">
 										The 2022 Flood incident has comes with unusual ferocity and
 										devastation effects on many communities in Jigawa State
