vide url embeded

--- a/program.html
+++ b/program.html
@@ -226,7 +226,7 @@
 								<div class="h-full mt-3 text-start">
 									<a
 										href="jigawa.html"
-										class="font-bold text-lg lg:text-xl text-left">
+										class="block font-bold text-lg lg:text-xl text-left">
 										Highlights on 2022 Flood Incident in Jigawa State
 									</a>
 
