--- a/jigawa.html
+++ b/jigawa.html
@@ -254,10 +254,26 @@
 					Management Team
 				</h2>
 				<div class="md:flex md:-mx-4 h-full w-full mt-10">
-					<video
+					<div style="padding: 73.19% 0 0 0; position: relative">
+						<iframe
+							src="https://player.vimeo.com/video/841474480?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+							frameborder="0"
+							allow="autoplay; fullscreen; picture-in-picture"
+							allowfullscreen
+							style="
+								position: absolute;
+								top: 0;
+								left: 0;
+								width: 100%;
+								height: 100%;
+							"
+							title="jigawaVid"></iframe>
+					</div>
+
+					<!-- <video
 						src="/videos/OMNI HOUSING PROJECT IN JIGAWA.mp4"
 						controls
-						class="object-contain w-full mx-auto"></video>
+						class="object-contain w-full mx-auto"></video> -->
 				</div>
 			</section>
 			<!-- end blog -->
@@ -428,9 +444,10 @@
 			</footer>
 			<!-- end footer -->
 		</main>
+		<script src="https://player.vimeo.com/api/player.js"></script>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
+		<!-- <script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=UA-131505823-4"></script>
 		<script>
@@ -442,6 +459,6 @@
 			gtag("js", new Date());
 
 			gtag("config", "UA-131505823-4");
-		</script>
+		</script> -->
 	</body>
 </html>
