--- a/jigawa.html
+++ b/jigawa.html
@@ -254,19 +254,13 @@
 					Management Team
 				</h2>
 				<div class="md:flex md:-mx-4 h-full w-full mt-10">
-					<div style="padding: 73.19% 0 0 0; position: relative">
+					<div class="w-screen h-screen">
 						<iframe
+							class="w-full h-full mx-auto"
 							src="https://player.vimeo.com/video/841474480?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
 							frameborder="0"
 							allow="autoplay; fullscreen; picture-in-picture"
 							allowfullscreen
-							style="
-								position: absolute;
-								top: 0;
-								left: 0;
-								width: 100%;
-								height: 100%;
-							"
 							title="jigawaVid"></iframe>
 					</div>
 
