--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
 
 						<p class="mt-2 leading-relaxed">
 							We, the members of Omini-Frontier Humanitarian International
-							organization a not a for-profit and non-political organization do
+							organization, a non-profit and non-political organization do
 							firmly and solemnly resolve to provide for ourselves a
 							constitution and to be governed by the provisions therein
 							contained.
@@ -287,14 +287,16 @@
 										</svg>
 									</span>
 									<span class="ml-3">
-										13A, Mambila street, Aso Drive., Maitaima, FCT, Nigeria
+										13A, Mambila street, Aso Drive., Maitaima, FCT,Abuja,
+										Nigeria
 									</span>
 								</a>
 							</li>
 
 							<li class="mt-4">
 								<a
-									href="#"
+									href="tel:+2348129238086"
+									
 									title=""
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
@@ -313,8 +315,8 @@
 							</li>
 							<li class="mt-4">
 								<a
-									href="#"
-									title=""
+									href="mailto:Omini-Frontierintl@gmail.com"
+									title="'Omini-Frontierintl@gmail.com"
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
 										<svg
