--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 								Omni-Frontier Humanitarian International organization
 							</h1>
 							<p class="text-blue-100 text-xl md:text-2xl leading-snug mt-4">
-								A not for-profit and non-political organization to serve and
-								assist the less priviledge.
+								A non-profit and non-political organization to serve and assist
+								the less priviledge.
 							</p>
 							<a
 								href="contact.html"
@@ -198,10 +198,9 @@
 
 						<p class="mt-2 leading-relaxed">
 							We, the members of Omni-Frontier Humanitarian International
-							organization a not a for-profit and non-political organization do
-							firmly and solemnly resolve to provide for ourselves a
-							constitution and to be governed by the provisions therein
-							contained.
+							organization a non-profit and non-political organization do firmly
+							and solemnly resolve to provide for ourselves a constitution and
+							to be governed by the provisions therein contained.
 						</p>
 					</div>
 
@@ -460,7 +459,8 @@
 										</svg>
 									</span>
 									<span class="ml-3">
-										13A, Mambila street, Aso Drive., Maitaima, FCT, Nigeria
+										13A, Mambila street, Aso Drive., Maitaima, FCT,Abuja,
+										Nigeria
 									</span>
 								</a>
 							</li>
