--- a/jigawa.html
+++ b/jigawa.html
@@ -320,14 +320,15 @@
 										</svg>
 									</span>
 									<span class="ml-3">
-										13A, Mambila street, Aso Drive., Maitaima, FCT, Nigeria
+										13A, Mambila street, Aso Drive., Maitaima, FCT, Abuja,
+										Nigeria
 									</span>
 								</a>
 							</li>
 
 							<li class="mt-4">
 								<a
-									href="#"
+									href="tel:+2348129238086"
 									title=""
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
@@ -346,7 +347,7 @@
 							</li>
 							<li class="mt-4">
 								<a
-									href="#"
+									href="mailto:Omni-Frontierintl@gmail.com"
 									title=""
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
