--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
 							Humanitarian International organization
 						</h1>
 						<p class="text-gray-700 mt-4">
-							A not for-profit and non-political organization to serve and
-							assist the less priviledge.
+							A non-profit and non-political organization to serve and assist
+							the less priviledge.
 						</p>
 
 						<form class="mt-6" action="#" method="POST">
