--- a/program.html
+++ b/program.html
@@ -216,12 +216,14 @@
 						</h2>
 						<div class="md:flex md:flex-wrap mt-4 md:-mx-4">
 							<div class="md:w-full md:px-4 lg:w-1/2 p-4">
-								<div class="bg-white rounded-lg border border-gray-300">
+								<a
+									href="jigawa.html"
+									class="block bg-white rounded-lg border border-gray-300">
 									<img
 										src="images/Jigawa.png"
 										alt=""
 										class="h-56 object-cover w-full mx-auto" />
-								</div>
+								</a>
 								<div class="h-full mt-3 text-start">
 									<a
 										href="jigawa.html"
@@ -317,7 +319,7 @@
 
 							<li class="mt-4">
 								<a
-									href="tel:+2348129238086"
+									href="#"
 									title=""
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
@@ -331,7 +333,26 @@
 												d="M14.594,13.994l-1.66,1.66c-0.577-0.109-1.734-0.471-2.926-1.66c-1.193-1.193-1.553-2.354-1.661-2.926l1.661-1.66 l0.701-0.701L5.295,3.293L4.594,3.994l-1,1C3.42,5.168,3.316,5.398,3.303,5.643c-0.015,0.25-0.302,6.172,4.291,10.766 C11.6,20.414,16.618,20.707,18,20.707c0.202,0,0.326-0.006,0.358-0.008c0.245-0.014,0.476-0.117,0.649-0.291l1-1l0.697-0.697 l-5.414-5.414L14.594,13.994z" />
 										</svg>
 									</span>
-									<span class="ml-3"> +2348129238086 </span>
+									<span class="ml-3">+234-909-599-9930</span>
+								</a>
+							</li>
+							<li class="mt-4">
+								<a
+									href="#"
+									title=""
+									class="flex items-center opacity-75 hover:opacity-100">
+									<span>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="24"
+											height="24"
+											viewBox="0 0 24 24"
+											class="fill-current">
+											<path
+												d="M14.594,13.994l-1.66,1.66c-0.577-0.109-1.734-0.471-2.926-1.66c-1.193-1.193-1.553-2.354-1.661-2.926l1.661-1.66 l0.701-0.701L5.295,3.293L4.594,3.994l-1,1C3.42,5.168,3.316,5.398,3.303,5.643c-0.015,0.25-0.302,6.172,4.291,10.766 C11.6,20.414,16.618,20.707,18,20.707c0.202,0,0.326-0.006,0.358-0.008c0.245-0.014,0.476-0.117,0.649-0.291l1-1l0.697-0.697 l-5.414-5.414L14.594,13.994z" />
+										</svg>
+									</span>
+									<span class="ml-3"> +234-706-458-2526</span>
 								</a>
 							</li>
 							<li class="mt-4">
