make changes to modal details

--- a/index.html
+++ b/index.html
@@ -101,41 +101,43 @@
 					</h1>
 					<div>
 						<h1 class="text-center font-bold text-base mb-6 mt-4">
-							Visa Net Donations
+							(USD) Visa Net Donations
 						</h1>
 						<div class="flex w-full items-center text-sm gap-3">
 							<h4 class="font-bold">Bank Name:</h4>
 							<span class="text-left text-sm"> TAJ BANK (USD)</span>
 						</div>
 						<div class="flex w-full items-center text-sm gap-5">
-							<h4 class="font-bold">Account Number:</h4>
-							<span class="text-left text-sm">00050-36845</span>
-						</div>
-						<div class="flex w-full items-center text-sm gap-5">
 							<h4 class="font-bold">Account Name:</h4>
 							<span class="text-left text-sm"
 								>OMNI-FRONTIER HUMANITARIAN INTERNATIONAL ORGANISATION.</span
 							>
+						</div>
+						<div class="flex w-full items-center text-sm gap-5">
+							<h4 class="font-bold">Account Number:</h4>
+							<span class="text-left text-sm">00050-36845</span>
 						</div>
 					</div>
 
 					<div class="h-12 w-full"></div>
 
 					<div>
-						<h1 class="text-center font-bold text-base mb-6">For NAIRA</h1>
+						<h1 class="text-center font-bold text-base mb-6">
+							For Naira Account
+						</h1>
 						<div class="flex w-full items-center text-sm gap-3">
 							<h4 class="font-bold">Bank Name:</h4>
 							<span class="text-left text-sm">TAJ BANK</span>
-						</div>
-						<div class="flex w-full items-center text-sm gap-5">
-							<h4 class="font-bold">Account Number:</h4>
-							<span class="text-left text-sm">00050-32586</span>
 						</div>
 						<div class="flex w-full items-center text-sm gap-5">
 							<h4 class="font-bold">Account Name:</h4>
 							<span class="text-left text-sm"
 								>OMNI-FRONTIER HUMANITARIAN INTERNATIONAL ORGANISATION.</span
 							>
+						</div>
+						<div class="flex w-full items-center text-sm gap-5">
+							<h4 class="font-bold">Account Number:</h4>
+							<span class="text-left text-sm">00050-32586</span>
 						</div>
 					</div>
 
