--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 					</h2>
 					<button
 						class="modalBtn px-8 py-4 text-white bg-red-500 rounded inline-block font-semibold md:ml-8 mt-4 md:mt-0">
-						Support Now
+						Support Us
 					</button>
 				</div>
 			</section>
