--- a/index.html
+++ b/index.html
@@ -320,12 +320,14 @@
 						</p>
 						<div class="md:flex md:flex-wrap mt-4 md:-mx-4">
 							<div class="md:w-full md:px-4 lg:w-1/2 p-4">
-								<div class="bg-white rounded-lg border border-gray-300">
+								<a
+									href="jigawa.html"
+									class="block bg-white rounded-lg border border-gray-300">
 									<img
 										src="images/Jigawa.png"
 										alt=""
 										class="h-56 object-cover w-full mx-auto" />
-								</div>
+								</a>
 								<div class="h-full mt-3 text-start">
 									<a
 										href="jigawa.html"
