add the new page

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 					</h1>
 					<div>
 						<h1 class="text-center font-bold text-sm md:text-base mb-6 mt-4">
-							(USD) Visa Net Donations
+							American Express Bank
 						</h1>
 						<div class="flex w-full items-center text-xs md:text-sm gap-3">
 							<h4 class="font-bold">Bank Name:</h4>
-							<span class="text-left text-xs md:text-sm"> TAJ BANK (USD)</span>
+							<span class="text-left text-xs md:text-sm">AMEX BANK (USD)</span>
 						</div>
-						<div class="flex w-full items-center text-xs md:text-sm gap-5">
+						<div class="flex w-full items-center text-xs md:text-sm">
 							<h4 class="font-bold hidden md:block">Account Name:</h4>
 							<h4 class="font-bold md:hidden">Acc/Name:</h4>
 							<span class="text-left text-xs md:text-sm py-4 md:py-0"
@@ -117,14 +117,31 @@
 						</div>
 						<div class="flex w-full items-center text-xs md:text-sm gap-5">
 							<h4 class="font-bold hidden md:block">Account Number:</h4>
-							<h4 class="font-bold md:hidden">Acc/Number:</h4>
-							<span class="text-left">00050-36845</span>
+							<h4 class="font-bold md:hidden my-2">Acc/Number:</h4>
+							<span class="text-left">1810458788</span>
+						</div>
+						<div class="flex w-full items-center text-xs md:text-sm gap-5">
+							<h4 class="font-bold hidden md:block">Beneficiary Bank:</h4>
+							<h4 class="font-bold md:hidden my-2">Beneficiary Bank</h4>
+							<span class="text-left">Access Bank Plc</span>
+						</div>
+						<div class="flex w-full items-center text-xs md:text-sm gap-5">
+							<h4 class="font-bold hidden md:block">Sort Code:</h4>
+							<h4 class="font-bold md:hidden my-2">Sort Code:</h4>
+							<span class="text-left">044085751</span>
+						</div>
+						<div class="flex w-full items-center text-xs md:text-sm gap-5">
+							<h4 class="font-bold hidden md:block">
+								Intermediary bank Swiftcode:
+							</h4>
+							<h4 class="font-bold md:hidden my-2">Swiftcode Code:</h4>
+							<span class="text-left">CiTiuS33</span>
 						</div>
 					</div>
 
 					<div class="h-12 w-full"></div>
 
-					<div>
+					<!-- <div>
 						<h1 class="text-center font-bold text-sm md:text-base mb-6">
 							For Naira Account
 						</h1>
@@ -144,7 +161,7 @@
 							<h4 class="font-bold md:hidden">Acc/Number:</h4>
 							<span class="text-left">00050-32586</span>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="h-12 w-full"></div>
 				</div>
