add the new page

--- a/index.html
+++ b/index.html
@@ -118,30 +118,33 @@
 						<div class="flex w-full items-center text-xs md:text-sm gap-5">
 							<h4 class="font-bold hidden md:block">Account Number:</h4>
 							<h4 class="font-bold md:hidden my-2">Acc/Number:</h4>
-							<span class="text-left">1810458788</span>
+							<span class="text-left">1810458788 (USD)</span>
 						</div>
 						<div class="flex w-full items-center text-xs md:text-sm gap-5">
 							<h4 class="font-bold hidden md:block">Beneficiary Bank:</h4>
 							<h4 class="font-bold md:hidden my-2">Beneficiary Bank</h4>
 							<span class="text-left">Access Bank Plc</span>
 						</div>
-						<div class="flex w-full items-center text-xs md:text-sm gap-5">
+						<!-- <div class="flex w-full items-center text-xs md:text-sm gap-5">
 							<h4 class="font-bold hidden md:block">Sort Code:</h4>
 							<h4 class="font-bold md:hidden my-2">Sort Code:</h4>
 							<span class="text-left">044085751</span>
-						</div>
-						<div class="flex w-full items-center text-xs md:text-sm gap-5">
+						</div> -->
+						<!-- <div class="flex w-full items-center text-xs md:text-sm gap-5">
 							<h4 class="font-bold hidden md:block">
 								Intermediary bank Swiftcode:
 							</h4>
 							<h4 class="font-bold md:hidden my-2">Swiftcode Code:</h4>
 							<span class="text-left">CiTiuS33</span>
-						</div>
+						</div> -->
 					</div>
 
 					<div class="h-12 w-full"></div>
-
 					<!-- <div>
+						b2b system
+						outside  syste
+
+
 						<h1 class="text-center font-bold text-sm md:text-base mb-6">
 							For Naira Account
 						</h1>
