update email, phone number and other pages

--- a/jigawa.html
+++ b/jigawa.html
@@ -143,7 +143,7 @@
 								<li class="md:ml-6 mt-3 md:mt-0">
 									<a
 										class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
-										href="contact.html"
+										href="mailto:omnifrontierhumanitarian@gmail.com"
 										>Contact us</a
 									>
 								</li>
@@ -281,7 +281,7 @@
 						on: +234-909-599-9930
 					</h2>
 					<a
-						href="contact.html"
+						href="mailto:omnifrontierhumanitarian@gmail.com"
 						class="px-8 py-4 bg-white text-blue-600 rounded inline-block font-semibold md:ml-8 mt-4 md:mt-0"
 						>Contact us</a
 					>
@@ -320,8 +320,7 @@
 										</svg>
 									</span>
 									<span class="ml-3">
-										13A, Mambila street, Aso Drive., Maitaima, FCT, Abuja,
-										Nigeria
+									Upper Grace Plaza, Plot 127 Shetima Monguno Crescent- 3rd fllor Utako Abuja, Behind Berger Yard
 									</span>
 								</a>
 							</li>
@@ -366,7 +365,7 @@
 							</li>
 							<li class="mt-4">
 								<a
-									href="mailto:Omni-Frontierintl@gmail.com"
+									href="mailto:omnifrontierhumanitarian@gmail.com"
 									title=""
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
@@ -380,7 +379,7 @@
 												d="M20,4H4C2.896,4,2,4.896,2,6v12c0,1.104,0.896,2,2,2h16c1.104,0,2-0.896,2-2V6C22,4.896,21.104,4,20,4z M20,8.7l-8,5.334 L4,8.7V6.297l8,5.333l8-5.333V8.7z" />
 										</svg>
 									</span>
-									<span class="ml-3">Omni-Frontierintl@gmail.com</span>
+									<span class="ml-3">omnifrontierhumanitarian@gmail.com</span>
 								</a>
 							</li>
 						</ul>
