--- a/program.html
+++ b/program.html
@@ -143,7 +143,7 @@
 								<li class="md:ml-6 mt-3 md:mt-0">
 									<a
 										class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
-										href="contact.html"
+										href="mailto:omnifrontierhumanitarian@gmail.com"
 										>Contact us</a
 									>
 								</li>
@@ -173,7 +173,7 @@
 							</h1>
 
 							<a
-								href="contact.html"
+								href="mailto:omnifrontierhumanitarian@gmail.com"
 								class="px-8 py-4 bg-teal-500 text-white rounded inline-block mt-8 font-semibold"
 								>Contact us</a
 							>
@@ -307,10 +307,10 @@ community
 				<div class="md:flex md:items-center md:justify-center">
 					<h2 class="text-xl font-bold text-white">
 						Get in touch with us today! <br class="block md:hidden" />Call us
-						on: +2348129238086
+						on: +234-909-599-9930
 					</h2>
 					<a
-						href="contact.html"
+						href="mailto:omnifrontierhumanitarian@gmail.com"
 						class="px-8 py-4 bg-white text-blue-600 rounded inline-block font-semibold md:ml-8 mt-4 md:mt-0"
 						>Contact us</a
 					>
@@ -349,8 +349,7 @@ community
 										</svg>
 									</span>
 									<span class="ml-3">
-										13A, Mambila street, Aso Drive., Maitaima, FCT, Abuja,
-										Nigeria
+									Upper Grace Plaza, Plot 127 Shetima Monguno Crescent- 3rd fllor Utako Abuja, Behind Berger Yard
 									</span>
 								</a>
 							</li>
@@ -395,7 +394,7 @@ community
 							</li>
 							<li class="mt-4">
 								<a
-									href="mailto:Omni-Frontierintl@gmail.com"
+									href="mailto:omnifrontierhumanitarian@gmail.com"
 									title=""
 									class="flex items-center opacity-75 hover:opacity-100">
 									<span>
@@ -409,7 +408,7 @@ community
 												d="M20,4H4C2.896,4,2,4.896,2,6v12c0,1.104,0.896,2,2,2h16c1.104,0,2-0.896,2-2V6C22,4.896,21.104,4,20,4z M20,8.7l-8,5.334 L4,8.7V6.297l8,5.333l8-5.333V8.7z" />
 										</svg>
 									</span>
-									<span class="ml-3">Omni-Frontierintl@gmail.com</span>
+									<span class="ml-3">omnifrontierhumanitarian@gmail.com</span>
 								</a>
 							</li>
 						</ul>
