--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 								<li class="md:ml-6 mt-3 md:mt-0">
 									<a
 										class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
-										href="contact.html"
+										href="mailto:omnifrontierhumanitarian@gmail.com"
 										>Contact us</a
 									>
 								</li>
@@ -176,7 +176,7 @@
 								Omini-Frontier Humanitarian International organization
 							</p>
 							<a
-								href="contact.html"
+								href="mailto:omnifrontierhumanitarian@gmail.com"
 								class="px-8 py-4 bg-teal-500 text-white rounded inline-block mt-8 font-semibold"
 								>Contact us</a
 							>
