--- a/humanitarian.html
+++ b/humanitarian.html
@@ -273,7 +273,7 @@
 				<div class="flex flex-col lg:flex-row lg:-mx-8">
 					<div class="w-full lg:w-1/2 lg:px-8">
 						<h2 class="text-3xl leading-tight font-bold mt-4">
-							Omni-Frontier Humanitarian International organization aims and
+							Omni-Frontier Humanitarian International organization- Aims and
 							objectives
 						</h2>
 
@@ -340,7 +340,7 @@
 				<div class="flex flex-col lg:flex-row lg:-mx-8">
 					<div class="w-full lg:px-8 text-center">
 						<h2 class="text-3xl leading-tight font-bold mt-4">
-							Our Recently concluded Programs
+							Our Programs
 						</h2>
 						<p class="mt-2 lg:text-xl leading-relaxed">
 							Humanitarian effort in Africa
@@ -365,8 +365,8 @@
 										</a>
 	
 										<p class="text-justify mt-4">
-											The 2022 Flood incident has comes with unusual ferocity and
-											devastation effects on many communities in Jigawa State
+											The 2022 Flood incident has come with unusual ferocity and
+											devastating effects on many communities in Jigawa State
 											especially those living along Hadejia Valley.
 										</p>
 										<p class="mb-3 text-left mt-3 font-bold">
