--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ International Investment Limited
 				<div class="flex flex-col lg:flex-row lg:-mx-8">
 					<div class="w-full lg:w-1/2 lg:px-8">
 						<h2 class="text-3xl leading-tight font-bold mt-4">
-							Navigating complex projects and investments requires precision. 
+							Navigating complex projects and investments require precision. 
 							
 						</h2>
 
@@ -525,7 +525,7 @@ Partner with us for global prosperity.
 									<a
 										href="#"
 										class="block font-bold text-lg lg:text-xl text-left">
-										MRS. Floretta Maduere
+										MRS. Floretta Madumere
 									</a>
 									<p class="text-start mt-2 capitalize">
 								Director Human Resources
