--- a/program.html
+++ b/program.html
@@ -209,7 +209,7 @@
 				<div class="flex flex-col lg:flex-row lg:-mx-8">
 					<div class="w-full lg:px-8 text-center">
 						<h2 class="text-3xl leading-tight font-bold mt-4">
-							Our Recently concluded Programs
+							Our Programs
 						</h2>
 						<h2 class="block mt-2 lg:text-xl leading-relaxed">
 							Humanitarian effort in Africa
@@ -234,8 +234,8 @@
 										</a>
 	
 										<p class="text-justify mt-4">
-											The 2022 Flood incident has comes with unusual ferocity and
-											devastation effects on many communities in Jigawa State
+											The 2022 Flood incident has come with unusual ferocity and
+											devastating effects on many communities in Jigawa State
 											especially those living along Hadejia Valley.
 										</p>
 										<p class="mb-3 text-left mt-3 font-bold">
