--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Partner with us for global prosperity.
 									href="#"
 									class="block bg-white rounded-lg border border-gray-300">
 									<img
-										src="images/Lawyer.jpeg"
+										src="images/Law.jpeg"
 										alt=""
 										class="h-72 object-contain w-full mx-auto" />
 								</a>
